# VulkanEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  MISSION.md  NOTES.md  RESOURCES.md  _quick_build.bat  build.bat  imgui.ini  selfengine_benchmark.csv
assets/models/: Fist Fight B.fbx  lvjuren.glb  plane.glb  skinned_probe.dae
assets/shaders/: auto_exposure_histogram.comp  black_hole.frag  bloom_downsample.frag  bloom_upsample.frag  deferred_lighting.frag  depth_prefill_3d.vert  dlss_mask_3d.frag  ffx_sssr_apply.frag  forward_3d.frag  forward_3d.vert  forward_3d_instanced.vert  forward_velocity_3d.frag  gbuffer_3d.frag  gbuffer_3d.vert  gbuffer_debug.frag  gbuffer_debug.vert  gpu_occlusion_audit.comp  hdr_composite.frag  hybrid_reflection_ray_query.hlsl  hybrid_reflection_skinning.hlsl  light_cluster_cull.comp  light_tile_cull.comp  occlusion_depth_pyramid.comp  reflection_probe_diffuse_irradiance.comp  reflection_probe_prefilter.comp  shadow_depth.vert  ssr_depth_pyramid.comp  ssr_diagnostics.comp  ssr_spatial.comp  ssr_temporal.comp  ssr_trace.comp  taa_resolve.frag  triangle.frag  triangle.vert  weighted_translucency_3d.frag  weighted_translucency_resolve.frag
assets/textures/: checker.ppm
docs/: AAA_DLSS_NEXT_STAGE_PLAN.md  AAA_NEXT_STAGE_PLAN.md  AAA_RENDERING_PIPELINE_PLAN.md  ENVIRONMENT.md  HYBRID_REFLECTION_FULL_AUDIT.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PHASE5_GPU_VISIBILITY_DECISION.md  RENDER_OBSERVABILITY_STACK.md  VULKAN_LEARNING_PATH.md  rendering-lessons.md
docs/reference_baselines/: dlss_default_scene_dlaa_motion_visual_qa_baseline.json  dlss_default_scene_dlaa_object_motion_visual_qa_baseline.json  dlss_default_scene_dlaa_visual_qa_baseline.json  dlss_default_scene_skinned_fbx_m_production_visual_qa_baseline.json  dlss_dlaa_visual_qa_baseline.json  dlss_forward_special_visual_qa_baseline.json  dlss_imported_articulated_dlaa_object_motion_visual_qa_baseline.json  dlss_imported_dynamic_dlaa_object_motion_visual_qa_baseline.json  dlss_imported_skinned_diagnostic_visual_qa_baseline.json  dlss_imported_skinned_preview_visual_qa_baseline.json  dlss_mask_policy_visual_qa_baseline.json  dlss_material_stress_visual_qa_baseline.json  dlss_visual_qa_baseline.json  dlss_wboit_visual_qa_baseline.json
scripts/: Analyze-HybridReflectionFullAudit.ps1  Capture-HybridReflectionFullAudit.ps1  Capture-NsightDlssFocusedFrame.ps1  Capture-RenderDocFrame.ps1  Compare-NsightDlssControlPair.ps1  Enter-VulkanDev.ps1  Export-NsightDlssInspectionPackage.ps1  Generate-SelfEngineBridgeManifest.ps1  Inspect-RenderDocGpuOcclusion.ps1  Inspect-RenderDocGpuOcclusion.py  Inspect-RenderDocReflectionFusion.ps1  Inspect-RenderDocReflectionFusion.py  Inspect-RenderDocSkinnedBlas.ps1  Inspect-RenderDocSkinnedBlas.py  Invoke-HybridReflectionLegacyDiagnostic.ps1  Run-Forward3DShadowRegression.ps1  Run-UnrealBridgeExport.ps1  Run-UnrealReferenceCapture.ps1  Set-SpirvShadowFunctionControl.ps1  Sign-SelfEngineDevBinary.ps1  Summarize-BenchmarkCsv.ps1  Test-2DRenderSmoke.ps1  Test-AaJitterVisual.ps1  Test-AaModeContracts.ps1  Test-ContactShadowHealth.ps1  Test-CsmStabilityHealth.ps1  Test-DirectionalShadowNormalOffsetMath.ps1  Test-DirectionalShadowPcssMath.ps1  Test-DirectionalShadowRippleAudit.ps1  Test-DirectionalShadowTentMath.ps1  Test-DlssVisualQa.ps1  Test-FidelityFxSssrIntegration.ps1  Test-Forward3DShadowHealth.ps1  Test-Forward3DShadowRegression.ps1  Test-GpuOcclusionHealth.ps1  Test-HybridReflectionSkinnedBlas.ps1  Test-HybridReflectionTargetAttribution.ps1  Test-HybridReflectionsCapability.ps1  Test-LightingShowcaseCeilingLightsHealth.ps1  Test-LocalShadowAttributionHealth.ps1  (+17 more)
src/: black_hole.cpp  core.h  forward_3d.cpp  main.cpp
src/app/: application.cpp  application.h  application_2d.cpp  application_2d.h  benchmark_recorder.cpp  benchmark_recorder.h  renderdoc_capture.cpp  renderdoc_capture.h
src/assets/: mesh_lod_derived_data_cache.cpp  mesh_lod_derived_data_cache.h  model_importer.cpp  model_importer.h  unreal_project_bridge.cpp  unreal_project_bridge.h
src/platform/: window.cpp  window.h
src/renderer/: render_queue.cpp  render_queue.h  temporal_upscaler.cpp  temporal_upscaler.h
src/renderer/vulkan/: Instance.cpp  Instance.h  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  compute_pipeline.cpp  compute_pipeline.h  cubemap.cpp  cubemap.h  depth_buffer.cpp  depth_buffer.h  descriptor_set_layout.cpp  descriptor_set_layout.h  descriptor_sets.cpp  descriptor_sets.h  device.cpp  device.h  fidelityfx_sssr_adapter.cpp  fidelityfx_sssr_adapter.h  frame_graph.cpp  frame_graph.h  frame_materials.h  framebuffer.cpp  framebuffer.h  gpu_occlusion_culling.cpp  gpu_occlusion_culling.h  gpu_timer.cpp  gpu_timer.h  graphics_pipeline.cpp  graphics_pipeline.h  hybrid_reflection_acceleration_structures.cpp  hybrid_reflection_acceleration_structures.h  hybrid_reflection_ray_query.cpp  hybrid_reflection_ray_query.h  ibl_generator.cpp  ibl_generator.h  image.cpp  (+70 more)
src/renderer/vulkan/features/: height_fog_feature.cpp  height_fog_feature.h  post_process_feature.cpp  post_process_feature.h  reflection_probe_fallback_feature.cpp  reflection_probe_fallback_feature.h  ssao_feature.cpp  ssao_feature.h  ssr_feature.cpp  ssr_feature.h
src/scene/: camera_2d.cpp  camera_2d.h  camera_3d.cpp  camera_3d.h  mesh_factory.cpp  mesh_factory.h  renderable_2d.cpp  renderable_2d.h  renderable_2d_order.cpp  renderable_2d_order.h  renderable_3d.cpp  renderable_3d.h  renderable_core.h  runtime_model_loader.cpp  runtime_model_loader.h  sample_scene_2d.cpp  sample_scene_2d.h  scene_2d.cpp  scene_2d.h  scene_3d.cpp  scene_3d.h  scene_storage.h  transform.cpp  transform.h
tools/unreal/: selfengine_bridge_capture_reference.py  selfengine_bridge_export.py
